Update production database configuration to use PostgreSQL naming conventions for database, username, and cache settings

--- a/config/database.yml
+++ b/config/database.yml
@@ -81,18 +81,18 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: remix_production
-    username: remix
+    database: remix_pg
+    username: remix_pg_user
     password: <%= ENV["REMIX_DATABASE_PASSWORD"] %>
   cache:
     <<: *primary_production
-    database: remix_production_cache
+    database: remix_pg_cache
     migrations_paths: db/cache_migrate
   queue:
     <<: *primary_production
-    database: remix_production_queue
+    database: remix_pg_queue
     migrations_paths: db/queue_migrate
   cable:
     <<: *primary_production
-    database: remix_production_cable
+    database: remix_pg_cable
     migrations_paths: db/cable_migrate
