--- a/config/database.yml
+++ b/config/database.yml
@@ -79,20 +79,20 @@ test:
 # for a full overview on how database connection configuration can be specified.
 #
 production:
-  primary: &primary_production
-    <<: *default
-    database: remix_pg
-    username: remix_pg_user
-    password: <%= ENV["REMIX_DATABASE_PASSWORD"] %>
+  <<: *default
+  url: <%= ENV["DATABASE_URL"] %>
+
   cache:
-    <<: *primary_production
+    <<: *default
     database: remix_pg_cache
     migrations_paths: db/cache_migrate
+
   queue:
-    <<: *primary_production
+    <<: *default
     database: remix_pg_queue
     migrations_paths: db/queue_migrate
+
   cable:
-    <<: *primary_production
+    <<: *default
     database: remix_pg_cable
     migrations_paths: db/cable_migrate
